--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-	"typescript.tsdk": "./server/node_modules/typescript/lib"
+	"typescript.tsdk": "./server/node_modules/typescript/lib",
+	"eslint.workingDirectories": ["server", "client"]
 }
