--- a/client/package.json
+++ b/client/package.json
@@ -107,7 +107,6 @@
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.2",
 		"babel-plugin-istanbul": "^6.0.0",
-		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^5.0.2",
 		"cypress": "^6.5.0",
 		"cypress-react-selector": "^2.3.6",
@@ -122,9 +121,6 @@
 		"eslint-webpack-plugin": "^2.5.1",
 		"file-loader": "^6.2.0",
 		"html-loader": "^2.0.0",
-		"html-webpack-plugin": "^5.1.0",
-		"mini-css-extract-plugin": "^1.3.7",
-		"optimize-css-assets-webpack-plugin": "^5.0.4",
 		"react-hot-loader": "^4.13.0",
 		"react-svg-loader": "^3.0.3",
 		"regenerator-runtime": "^0.13.7",
@@ -132,24 +128,28 @@
 		"style-loader": "^2.0.0",
 		"ts-loader": "^8.0.17",
 		"typescript": "^4.2.2",
-		"uglifyjs-webpack-plugin": "^2.2.0",
 		"url-loader": "^4.1.1",
 		"webpack": "^5.22.0",
-		"webpack-bundle-analyzer": "^4.4.0",
 		"webpack-cli": "^4.5.0",
-		"webpack-dev-server": "^3.11.2"
+		"webpack-dev-server": "^3.11.2",
+		"apollo-upload-client": "^14.1.3",
+		"clean-webpack-plugin": "^3.0.0",
+		"html-webpack-plugin": "^5.2.0",
+		"mini-css-extract-plugin": "^1.3.9",
+		"optimize-css-assets-webpack-plugin": "^5.0.4",
+		"webpack-bundle-analyzer": "^4.4.0"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.3.11",
 		"@emotion/core": "^11.0.0",
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
-		"apollo-upload-client": "^14.1.3",
 		"graphql": "^15.5.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
+		"uglifyjs-webpack-plugin": "^2.2.0",
 		"uuid": "^8.3.2"
 	}
 }
